--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 60px;
   padding: 20px;
+  margin-bottom: 60px;
   color: white;
 }
 
@@ -22,7 +18,10 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+button {
+  font-size: 1.2em;
+  cursor: pointer;
+  box-shadow: 10px 10px 20px #e5e5e5;
+  background-color: #222;
+  color: white;
 }
